fix overflow issue

--- a/AngularFrontend/src/app/highchart-daily/highchart-daily.component.css
+++ b/AngularFrontend/src/app/highchart-daily/highchart-daily.component.css
@@ -3,7 +3,3 @@ div.container {
     margin-top: 35px;
     margin-bottom: 35px;
 }
-
-highcharts-chart {
-    display: block;
-}
