--- a/AngularFrontend/src/app/highchart-yearly/highchart-yearly.component.css
+++ b/AngularFrontend/src/app/highchart-yearly/highchart-yearly.component.css
@@ -20,6 +20,6 @@ div.container {
     margin-bottom: 35px;
 }
 
-highcharts-chart {
+/* highcharts-chart {
     display: block;
-}
+} */
